# anvx

./: .env.local.example  .gitignore  .mcpregistry_registry_token  CLAUDE.md  CONTRIBUTING.md  README.md  agents.md  main.py  package-lock.json  package.json  pyproject.toml  server.json
analytics-backend/: package-lock.json  package.json
analytics-backend/api/: events.ts
apps/routing-engine/: package-lock.json  package.json  tsconfig.json  vercel.json
apps/web/: next.config.mjs  (+6 more)
docs/: LANDING_SNAPSHOT.md
engine/: main.py  models.py  setup.py  utils.py
mcp/: README.md  server.py  tools.py
mcp-server/: server.py
openclaw-skill/: SKILL.md  manifest.json
scripts/: routing-load-test.sh
services/: api.env
services/api/: pyproject.toml  render.yaml  run-dev.sh  vercel.json
services/api/app/: analytics.py  anomaly.py  attribution.py  auth.py  db.py  insights.py  logging.py  main.py  observer.py  reconcile.py  settings.py  shadow.py
services/api/app/jobs/: parse_document.py
services/api/app/notifications/: dispatch.py  email.py  slack.py
services/api/app/notifications/templates/: anomaly_detected.html  anomaly_detected.slack.json  anomaly_detected.txt  autopilot_digest.html  autopilot_digest.slack.json  autopilot_digest.txt  budget_warning.html  budget_warning.slack.json  budget_warning.txt  circuit_breaker.html  circuit_breaker.slack.json  circuit_breaker.txt  close_pack_ready.html  close_pack_ready.slack.json  close_pack_ready.txt  copilot_approval_request.html  copilot_approval_request.slack.json  copilot_approval_request.txt  incident_resumed.html  incident_resumed.slack.json  incident_resumed.txt  runway_alert.html  runway_alert.slack.json  runway_alert.txt  workspace_invitation.html  workspace_invitation.txt
services/api/app/packs/: close_pack.py
services/api/app/packs/templates/: close_pack.html
services/api/app/parsing/: auto_detect.py  parsed_transaction.py  sniffer.py
services/api/app/parsing/templates/: amex.py  chase_cc.py  mercury.py  ramp.py  svb.py  wise.py
services/api/app/routers/: anomalies.py  attribution.py  billing.py  connectors.py  copilot.py  dashboard.py  documents.py  incidents.py  insights.py  models.py  notifications.py  observer.py  onboarding.py  packs.py  policies.py  reconcile.py  routing.py  routing_rules.py  shadow.py  tokens.py  workspace.py
services/api/jobs/: refresh_models.py
services/api/tests/: test_anomaly.py  test_attribution.py  test_auth.py  test_billing.py  test_insight_ranking.py  test_insights.py  test_observer.py  test_parsing.py  test_reconcile.py  test_shadow.py  test_tokens.py
skill/: SKILL.md  manifest.json  pyproject.toml
supabase/: config.toml
(+232 files in other folders)
