[project]
name = "anvx"
version = "0.2.0"
description = "Token Economy Intelligence — core package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "httpx>=0.28.1",
    "keyring>=25.0.0",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["packages/core/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/core/src/anvx_core/testing"]

[tool.uv.workspace]
members = [
    "packages/core",
    "services/api",
]
